# pe-org-air-cs3

./: .gitignore  README.md
Prototyping/: pyproject.toml
Prototyping/TalentAnalyzerPOC/: run_analysis.py  snowflake_client.py  talent_analyzer_v2.py
Prototyping/airflow_implementation_validation/: verify_integration_dag_load.py
Prototyping/glassdoor_pipeline_validation/: verify_glassdoor_pipeline.py
Prototyping/hiring_debug/: test_jpm_digital_presence.py
Prototyping/scoring_poc/: board_analyzer.py  position_calculator.py  test_board_analyzer.py  test_board_analyzer_integration.py  test_position_calculator.py
airflow/: Dockerfile  docker-compose.yaml
pe-org-air-platform/: .env.example  pyproject.toml  requirements.txt
pe-org-air-platform/app/: config.py  logging_conf.py  main.py
pe-org-air-platform/app/database/: schema.sql  schema_signal.sql  seed.sql
pe-org-air-platform/app/models/: assessment.py  dimension.py  enums.py  glassdoor_models.py  glassdoor_schema.py  sec.py  signals.py
pe-org-air-platform/app/pipelines/: board_analyzer.py  integration_pipeline.py
pe-org-air-platform/app/routers/: assessments.py  companies.py  evidence.py  integration.py  (+3 more)
pe-org-air-platform/dags/: integration_pipeline_dag.py  sec_ingestion_dag.py
pe-org-air-platform/docker/: Dockerfile  docker-compose.yml  nginx.conf
pe-org-air-platform/frontend/: Dockerfile
pe-org-air-platform/tests/: conftest.py  test_api.py  test_concurrency.py  test_flows.py  test_models.py  test_performance_cache.py  test_router_coverage.py  test_scoring_properties.py  test_sec_downloader.py
(+31 files in other folders)
