[project]
name = "prototyping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.1.1",
    "googlesearch-python>=1.3.0",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.1",
    "pydantic>=2.12.5",
    "structlog>=25.5.0",
]
